# python-mockchroot

./: README.md  setup.cfg  setup.py
docs/: Makefile
docs/source/: conf.py  index.rst  mock_chroot.config.rst  mock_chroot.rst  tutorial.rst
mock_chroot/: __init__.py
mock_chroot/config/: __init__.py  composition.py  highlevel.py  koji.py
test/: conftest.py  test_mock_chroot.py  test_mock_chroot_config.py  test_mock_chroot_config_builder.py  test_mock_chroot_config_highlevel.py  test_mock_chroot_config_koji.py
test/fixtures/: custom.cfg
test/fixtures/mounted_data/: mounted_file.txt
