[metadata]
name = mock_chroot
author = Barak Korren
author-email = bkorren@redhat.com
summary = Python library for using the Mock chroot-based build tool
description-file = README.md
home-page = https://github.com/ifireball/python-mockchroot
license = 'MIT'
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords =
    development
    build
    chroot
    mock
[files]
[entry_points]
[aliases]
test=pytest
